--- a/source/Views/GridViewGameOverview.xaml
+++ b/source/Views/GridViewGameOverview.xaml
@@ -159,7 +159,7 @@
                                             
                                             <GridEx x:Name="GridEx" Margin="0,5,0,10"
                                                     ColumnCount="2" StarColumns="1"
-                                                    RowCount="21" AutoLayoutColumns="2"
+                                                    RowCount="24" AutoLayoutColumns="2"
                                                     Tag="{DynamicResource GridViewDetailsIconsVisibility}">
                                                 <Grid.Resources>
                                                     <Style TargetType="TextBlock" BasedOn="{StaticResource BaseTextBlockStyle}" />
@@ -191,6 +191,14 @@
                                                 </Label>
                                                 <TextBlock Name="PART_TextLastActivity" VerticalAlignment="Center" />
 
+                                                <Label Name="PART_ElemRecentActivity" >
+                                                    <StackPanel Orientation="Horizontal">
+                                                        <TextBlock Text="&#xEC45;" Style="{DynamicResource Icon}" />
+                                                        <TextBlock Text="{DynamicResource LOCRecentActivityLabel}" />
+                                                    </StackPanel>
+                                                </Label>
+                                                <TextBlock Name="PART_TextRecentActivity" VerticalAlignment="Center" />
+                                                
                                                 <Label Name="PART_ElemCompletionStatus" >
                                                     <StackPanel Orientation="Horizontal">
                                                         <TextBlock Text="&#xEED6;" Style="{DynamicResource Icon}" />
@@ -199,6 +207,22 @@
                                                 </Label>
                                                 <Button Name="PART_ButtonCompletionStatus" VerticalAlignment="Center" />
 
+                                                <Label Name="PART_ElemInstallDirectory" >
+                                                    <StackPanel Orientation="Horizontal">
+                                                        <TextBlock Text="&#xef43;" Style="{DynamicResource Icon}" />
+                                                        <TextBlock Text="{DynamicResource LOCGameInstallDirTitle}" />
+                                                    </StackPanel>
+                                                </Label>
+                                                <Button Name="PART_ButtonInstallDirectory" VerticalAlignment="Center" />
+
+                                                <Label Name="PART_ElemInstallSize" >
+                                                    <StackPanel Orientation="Horizontal">
+                                                        <TextBlock Text="&#xef43;" Style="{DynamicResource Icon}" />
+                                                        <TextBlock Text="{DynamicResource LOCInstallSizeLabel}" />
+                                                    </StackPanel>
+                                                </Label>
+                                                <TextBlock Name="PART_TextInstallSize" VerticalAlignment="Center" />
+                                                
                                                 <Label Name="PART_ElemLibrary" >
                                                     <StackPanel Orientation="Horizontal">
                                                         <TextBlock Text="&#xEF65;" Style="{DynamicResource Icon}" />
