--- a/source/Views/GridViewGameOverview.xaml
+++ b/source/Views/GridViewGameOverview.xaml
@@ -91,12 +91,10 @@
                                             </Style>
                                         </ContentControl.Resources>
                                     </ContentControl>
-                                    <TextBlock Name="PART_TextDisplayName" FontSize="{DynamicResource FontSizeLarger}"
-                                               TextWrapping="Wrap" DockPanel.Dock="Left" Margin="0,0,10,0"
-                                               Tag="{DynamicResource GridViewDisplayGameNameIfLogoVisible}"
-                                               VerticalAlignment="Center" Foreground="{DynamicResource TextBrush}">
-                                        <TextBlock.Style>
-                                            <Style TargetType="TextBlock">
+                                    <Border DockPanel.Dock="Left" Margin="0,0,10,0"
+                                            Tag="{DynamicResource GridViewDisplayGameNameIfLogoVisible}">
+                                        <Border.Style>
+                                            <Style TargetType="Border">
                                                 <Setter Property="Visibility" Value="Visible" />
                                                 <Style.Triggers>
                                                     <MultiDataTrigger>
@@ -110,11 +108,15 @@
                                                     </MultiDataTrigger>
                                                 </Style.Triggers>
                                             </Style>
-                                        </TextBlock.Style>
-                                        <TextBlock.Effect>
-                                            <DropShadowEffect ShadowDepth="3"/>
-                                        </TextBlock.Effect>
-                                    </TextBlock>
+                                        </Border.Style>
+                                        <TextBlock Name="PART_TextDisplayName" FontSize="{DynamicResource FontSizeLarger}"
+                                                   TextWrapping="Wrap" 
+                                                   VerticalAlignment="Center" Foreground="{DynamicResource TextBrush}">
+                                            <TextBlock.Effect>
+                                                <DropShadowEffect ShadowDepth="3"/>
+                                            </TextBlock.Effect>
+                                        </TextBlock>
+                                    </Border>
 
                                 </DockPanel>
                                 
