Fix details not wrapping text when there is not enough width space

--- a/source/DerivedStyles/PropertyItemButton.xaml
+++ b/source/DerivedStyles/PropertyItemButton.xaml
@@ -11,7 +11,7 @@
                     <TextBlock FontSize="{TemplateBinding FontSize}" FontWeight="Medium"
                                Foreground="{TemplateBinding Foreground}"
                                Text="{TemplateBinding Content, Converter={StaticResource ObjectToStringConverter}}"
-                               TextWrapping="NoWrap"/>
+                               TextWrapping="Wrap"/>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
